# Lisod-Webserver

./: CMakeLists.txt  Makefile
secure/: grader.crt  grader.key
src/: Makefile  daemonize.c  daemonize.h  error_page.html  lisod.c  lisod.h  log.c  log.h  log.txt  main.c  ssl.c  ssl.h  state.h  tests.txt  vulnerability.txt
src/flaskr/: flaskr.py  wsgi_wrapper.py
src/flaskr/templates/: layout.html  login.html  show_entries.html
www/: index.css  index.html
www/foldy/: yelsayed.html
